# customer-satisfaction-mlops-pipeline

./: .gitignore  .pre-commit-config.yaml  README.md  mlflow.db  pyproject.toml  requirements.txt  run_pipeline.py
pipelines/: data_pipeline.py
src/customer_satisfaction/config/: paths.py
src/customer_satisfaction/data/: cleaner.py  loader.py  splitter.py  validator.py
src/customer_satisfaction/domain/: evaluation_result.py  experiment_result.py  training_result.py
src/customer_satisfaction/logging/: logger.py
src/customer_satisfaction/models/: evaluator.py  registry.py  trainer.py
src/customer_satisfaction/tracking/: base.py
steps/: clean_data.py  evaluate_model.py  ingest_data.py  split_data.py  train_model.py
