[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-satisfaction-mlops"
version = "0.1.0"
description = "customer Satisfaction MLOps v2"
requires-python= ">=3.11"

[tool.setuptools]
package-dir = {"" = "src"}

[tools.setuptools.packages.find]
where = ["src"]
